--- a/view/strava-api/strava/index.phtml
+++ b/view/strava-api/strava/index.phtml
@@ -21,6 +21,7 @@ $this->pageBreadcrumbs()->setItems([
         <div class="card bg-success">
             <div class="card-header text-center">
                 <i class="fa fa-running"></i>
+                <h5 class="card-title text-center mt-2">Totaal activiteiten</h5>
             </div>
             <div class="card-body">
                 <h5 class="card-title text-center"><?= $totalRunActivities ?></h5>
@@ -31,9 +32,12 @@ $this->pageBreadcrumbs()->setItems([
         <div class="card bg-warning">
             <div class="card-header text-center">
                 <i class="fas fa-tachometer-alt"></i>
+                <h5 class="card-title text-center mt-2">Gemiddelde tempo</h5>
             </div>
             <div class="card-body">
-                <h5 class="card-title text-center"><?= $averageSpeed ?></h5>
+                <h5 class="card-title text-center">
+                    <?= $this->stravaViewHelper()->getAverageSpeed($averageSpeed) ?>
+                </h5>
             </div>
         </div>
     </div>
@@ -41,12 +45,118 @@ $this->pageBreadcrumbs()->setItems([
         <div class="card bg-secondary">
             <div class="card-header text-center">
                 <i class="fas fa-road"></i>
+                <h5 class="card-title text-center mt-2">Totaal km's</h5>
             </div>
             <div class="card-body">
                 <h5 class="card-title text-center">
-                    <?= number_format($totalRunDistance / 1000, 2, ',', '.'); ?>
-                   </h5>
+                    <?= $this->stravaViewHelper()->getDistance($totalRunDistance) ?> km
+                </h5>
             </div>
         </div>
+    </div>
+    <div class="col">
+        <div class="card bg-secondary">
+            <div class="card-header text-center">
+                <i class="fas fa-stopwatch"></i>
+                <h5 class="card-title text-center mt-2">Totaal tijd</h5>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title text-center">
+                    <?= $this->stravaViewHelper()->getTotalMovingTime($totalRunTime); ?>
+                </h5>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card bg-info">
+            <div class="card-header text-center">
+                <i class="fas fa-mountain"></i>
+                <h5 class="card-title text-center mt-2">Gemiddelde hoogteverschil</h5>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title text-center">
+                    <?= $this->stravaViewHelper()->getTotalElevationGain($averageElevation); ?>
+                </h5>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card bg-danger">
+            <div class="card-header text-center">
+                <i class="fas fa-heartbeat"></i>
+                <h5 class="card-title text-center mt-2">Gemiddelde hartslag</h5>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title text-center">
+                    <?= $this->stravaViewHelper()->getTotalElevationGain($averageHeartbeat); ?>
+                </h5>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="col">
+        <table class="table table-dark table-sm table-bordered table-hover table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th colspan="7" class="text-center medal"><i class="fas fa-medal"></i></th>
+            </tr>
+            <tr>
+                <th colspan="7" class="text-center">
+                    <h5>Snelste wedstrijd<br/><?= $fastestActivity->getName(); ?></h5>
+                    <h7><?= $fastestActivity->getStartDateLocal()->format('d-m-Y'); ?></h7>
+                </th>
+            </tr>
+            <tr>
+                <th class="text-center"><i class="fas fa-road"></i></th>
+                <th class="text-center"><i class="fas fa-tachometer-alt"></i></th>
+                <th class="text-center"><i class="fas fa-stopwatch"></i></th>
+                <th class="text-center"><i class="fas fa-heartbeat"></i></th>
+                <th class="text-center"><i class="fas fa-mountain"></i></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th class="text-center"><?= $this->stravaViewHelper()->getDistance($fastestActivity->getDistance()); ?> km</th>
+                <th class="text-center"><?= $this->stravaViewHelper()->getAverageSpeed($fastestActivity->getAverageSpeed()); ?></th>
+                <th class="text-center"><?= $this->stravaViewHelper()->getMovingTime($fastestActivity->getMovingTime()); ?></th>
+                <th class="text-center"><?= $fastestActivity->getAverageHeartrate(); ?></th>
+                <th class="text-center"><?= $this->stravaViewHelper()->getTotalElevationGain($fastestActivity->getTotalElevationGain()); ?></th>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="col">
+        <table class="table table-dark table-sm table-bordered table-hover table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th colspan="7" class="text-center medal"><i class="fas fa-ruler"></i></th>
+            </tr>
+            <tr>
+                <th colspan="7" class="text-center">
+                    <h5>Langste wedstrijd<br/><?= $longestActivity->getName(); ?></h5>
+                    <h7><?= $longestActivity->getStartDateLocal()->format('d-m-Y'); ?></h7>
+                </th>
+            </tr>
+            <tr>
+                <th class="text-center"><i class="fas fa-road"></i></th>
+                <th class="text-center"><i class="fas fa-tachometer-alt"></i></th>
+                <th class="text-center"><i class="fas fa-stopwatch"></i></th>
+                <th class="text-center"><i class="fas fa-heartbeat"></i></th>
+                <th class="text-center"><i class="fas fa-mountain"></i></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th class="text-center"><?= $this->stravaViewHelper()->getDistance($longestActivity->getDistance()); ?> km</th>
+                <th class="text-center"><?= $this->stravaViewHelper()->getAverageSpeed($longestActivity->getAverageSpeed()); ?></th>
+                <th class="text-center"><?= $this->stravaViewHelper()->getMovingTime($longestActivity->getMovingTime()); ?></th>
+                <th class="text-center"><?= $longestActivity->getAverageHeartrate(); ?></th>
+                <th class="text-center"><?= $this->stravaViewHelper()->getTotalElevationGain($longestActivity->getTotalElevationGain()); ?></th>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
