Removed some important things

--- a/view/strava-api/strava/detail.phtml
+++ b/view/strava-api/strava/detail.phtml
@@ -306,5 +306,5 @@ $this->pageBreadcrumbs()->setItems([
     }
 </script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1n_2dwkLKZ8lMls39ZGeLuxQ08oyniIs&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=<?= $googleMapKey ?>&callback=initMap">
 </script>
