--- a/view/strava-api/strava/activiteiten.phtml
+++ b/view/strava-api/strava/activiteiten.phtml
@@ -16,6 +16,9 @@ $this->pageBreadcrumbs()->setItems([
         <?= $this->pageBreadcrumbs()->render(); ?>
     </div>
 </div>
+<?php
+echo $this->partial('strava-api/partial/filter-activities.phtml', ['years' => $years]);
+?>
 <div class="row">
     <div class="col">
         <table class="table table-dark table-sm table-bordered table-hover table-striped">
